@@ -5,6 +5,7 @@ CVS HEAD:
    * fixed help description of income and upkeep (#13565)
    * updated several unit descriptions
    * document that Woses receive no traits (#13630)
+   * replay suggested save game now translated (#13558)
  * unit balancing and modifications:
    * max level units given After-Max-Level-Advancement (AMLA) of 3 HP/100XP
      with no auto-heal; Necrophage has healing AMLA with no bonus HP
